# pinn_FGM_loosley

./: debug_imports.py  pyproject.toml
experiments/: Analytical_dispersion.csv  PINN_L3_N20.csv  PINN_L3_N30.csv  PINN_L3_N40.csv  PINN_L4_N20.csv  PINN_L4_N30.csv  PINN_L4_N40.csv  PINN_L5_N20.csv  PINN_L5_N30.csv  PINN_L5_N40.csv  PINN_L6_N20.csv  PINN_L6_N30.csv  PINN_L6_N40.csv  PINN_arctan_L3_N20.csv  PINN_dispersion.csv  PINN_gelu_L3_N20.csv  PINN_relu_L3_N20.csv  PINN_sigmoid_L3_N20.csv  PINN_silu_L3_N20.csv  PINN_sin_L3_N20.csv  PINN_sin_gelu_L3_N20.csv  PINN_sin_tanh_L3_N20.csv  PINN_sin_tanh_gelu_L3_N20.csv  PINN_softplus_L3_N20.csv  PINN_tanh_L3_N20.csv  activation_error_analysis.csv  activation_function_comparison.csv  architecture_study.csv  comparison_table.csv  dispersion_L3_N20.pth  dispersion_L3_N30.pth  dispersion_L3_N40.pth  dispersion_L4_N20.pth  dispersion_L4_N30.pth  dispersion_L4_N40.pth  dispersion_L5_N20.pth  dispersion_L5_N30.pth  dispersion_L5_N40.pth  dispersion_L6_N20.pth  dispersion_L6_N30.pth  (+29 more)
experiments/activation_results/: activation_results.csv  model_half_arctan.pt  model_half_gelu.pt  model_half_relu.pt  model_half_sigmoid.pt  model_half_silu.pt  model_half_sin.pt  model_half_softplus.pt  model_half_tanh.pt  model_layer_arctan.pt  model_layer_gelu.pt  model_layer_relu.pt  model_layer_sigmoid.pt  model_layer_silu.pt  model_layer_sin.pt  model_layer_softplus.pt  model_layer_tanh.pt
src/: boundary_conditions.py  config.py  losses.py  networks.py  pde_residual.py  sampling.py  train.py  utils.py
(+1 files in other folders)
